; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_children.c_fpm_children_free.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_children.c_fpm_children_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpm_child_s = type { %struct.fpm_child_s* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fpm_children_free(%struct.fpm_child_s* %0) #0 {
  %2 = alloca %struct.fpm_child_s*, align 8
  %3 = alloca %struct.fpm_child_s*, align 8
  store %struct.fpm_child_s* %0, %struct.fpm_child_s** %2, align 8
  br label %4

4:                                                ; preds = %13, %1
  %5 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %6 = icmp ne %struct.fpm_child_s* %5, null
  br i1 %6, label %7, label %15

7:                                                ; preds = %4
  %8 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %9 = getelementptr inbounds %struct.fpm_child_s, %struct.fpm_child_s* %8, i32 0, i32 0
  %10 = load %struct.fpm_child_s*, %struct.fpm_child_s** %9, align 8
  store %struct.fpm_child_s* %10, %struct.fpm_child_s** %3, align 8
  %11 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %12 = call i32 @fpm_child_close(%struct.fpm_child_s* %11, i32 0)
  br label %13

13:                                               ; preds = %7
  %14 = load %struct.fpm_child_s*, %struct.fpm_child_s** %3, align 8
  store %struct.fpm_child_s* %14, %struct.fpm_child_s** %2, align 8
  br label %4

15:                                               ; preds = %4
  ret i32 0
}

declare dso_local i32 @fpm_child_close(%struct.fpm_child_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
